--- a/ALifeLabCompanionApp/ALifeLabCompanionApp/Base.lproj/Main.storyboard
+++ b/ALifeLabCompanionApp/ALifeLabCompanionApp/Base.lproj/Main.storyboard
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Swq-0A-VWn">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Explore-->
+        <scene sceneID="K4B-dR-dfb">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ALifeLabCompanionApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController title="Explore" id="SFe-T3-DRZ" customClass="ViewController" customModule="ALifeLabCompanionApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eQx-pk-l0i">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hbZ-DY-Jfg">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uvo-YM-xfH">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -26,22 +27,128 @@
                                 </wkWebViewConfiguration>
                             </wkWebView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="zs4-NP-tq2"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="hbZ-DY-Jfg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ANn-lt-ndG"/>
-                            <constraint firstItem="hbZ-DY-Jfg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Ngz-Dt-cqD"/>
-                            <constraint firstAttribute="bottom" secondItem="hbZ-DY-Jfg" secondAttribute="bottom" id="tca-md-tvY"/>
-                            <constraint firstAttribute="trailing" secondItem="hbZ-DY-Jfg" secondAttribute="trailing" id="xjZ-dk-Y0Z"/>
+                            <constraint firstItem="zs4-NP-tq2" firstAttribute="bottom" secondItem="Uvo-YM-xfH" secondAttribute="bottom" id="3TT-Ea-RXL"/>
+                            <constraint firstItem="zs4-NP-tq2" firstAttribute="trailing" secondItem="Uvo-YM-xfH" secondAttribute="trailing" id="CeD-nr-0Yo"/>
+                            <constraint firstItem="Uvo-YM-xfH" firstAttribute="top" secondItem="zs4-NP-tq2" secondAttribute="top" id="fYJ-zS-9wW"/>
+                            <constraint firstItem="Uvo-YM-xfH" firstAttribute="leading" secondItem="zs4-NP-tq2" secondAttribute="leading" id="g8f-VY-rUX"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="1U6-H9-HtF"/>
                     <connections>
-                        <outlet property="webView" destination="hbZ-DY-Jfg" id="Lbg-FQ-Ery"/>
+                        <outlet property="webView" destination="Uvo-YM-xfH" id="tt2-2e-Jlw"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ynx-SF-1G7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="98" y="5"/>
+            <point key="canvasLocation" x="1900" y="374.64788732394368"/>
+        </scene>
+        <!--Explore-->
+        <scene sceneID="Q5h-oT-eQE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kos-QR-oFp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Explore" id="m2A-rh-Ay3"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nmx-Ag-ShD">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="SFe-T3-DRZ" kind="relationship" relationship="rootViewController" id="aYz-1i-Yt2"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XEC-HW-EgE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="976.33587786259534" y="374.64788732394368"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="vQr-4G-gum">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Swq-0A-VWn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tQo-gX-dTw">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="kos-QR-oFp" kind="relationship" relationship="viewControllers" id="dWR-B9-50W"/>
+                        <segue destination="BjE-VI-Kxt" kind="relationship" relationship="viewControllers" id="bhI-Rs-egM"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BLl-uA-ifo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
+        </scene>
+        <!--View-->
+        <scene sceneID="BKe-W7-2Si">
+            <objects>
+                <navigationController id="BjE-VI-Kxt" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="View" id="xQQ-ec-dSp"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nNv-WH-Lid">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="nwh-JT-ssa" kind="relationship" relationship="rootViewController" id="WGD-Bd-kbu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4fx-rF-Aig" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="996" y="1187"/>
+        </scene>
+        <!--View-->
+        <scene sceneID="fol-3f-n42">
+            <objects>
+                <collectionViewController title="View" id="nwh-JT-ssa" customClass="ViewerCollectionViewController" customModule="ALifeLabCompanionApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" id="qSG-4T-Nco">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dau-D8-ek8">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="COC-aY-grE" customClass="ImageCell" customModule="ALifeLabCompanionApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="xkE-Bh-OEY">
+                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YGF-4w-qKi">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="YGF-4w-qKi" secondAttribute="trailing" id="8k3-ud-EJd"/>
+                                        <constraint firstItem="YGF-4w-qKi" firstAttribute="leading" secondItem="xkE-Bh-OEY" secondAttribute="leading" id="NaI-8q-HxM"/>
+                                        <constraint firstAttribute="bottom" secondItem="YGF-4w-qKi" secondAttribute="bottom" id="egO-mA-bA5"/>
+                                        <constraint firstItem="YGF-4w-qKi" firstAttribute="top" secondItem="xkE-Bh-OEY" secondAttribute="top" id="sqM-Wh-aeO"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="128" height="128"/>
+                                <connections>
+                                    <outlet property="imageView" destination="YGF-4w-qKi" id="CYW-7L-nkz"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="nwh-JT-ssa" id="mWB-Cv-5dk"/>
+                            <outlet property="delegate" destination="nwh-JT-ssa" id="uFs-tE-2ru"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="LLT-fy-8CE"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vhy-Cn-Pdz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1883" y="1187"/>
         </scene>
     </scenes>
     <resources>
